# waitlib

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yaml
etc/: jupyter_lab_config.py  migrated  set_project_name.py
etc/notebooks/: sandbox.ipynb
help/: README.md  publish.md  usage.md
src/test/: test_waitlib.py
src/waitlib/: __init__.py  cli.py  waitlib.py
